fix: perform either transit or carpool routing, not both